# RCO-Ardo

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  startup.ps1  startup.sh
.github/workflows/: ci.yml
api/: __init__.py  config.py  dependencies.py  main.py  metadata.py  security.py
api/middleware/: request_context.py
api/repositories/: __init__.py  analytics.py  financial.py  pipeline.py  system.py
api/routers/: __init__.py  analytics.py  auth.py  financial.py  operations.py  pipeline.py  system.py
api/schemas/: analytics.py  common.py  financial.py  pipeline.py  security.py  system.py
api/services/: analytics.py  financial.py  pipeline.py  system.py  (+1 more)
config/: business_rules.yaml  logging.yaml  settings.py
database/: enterprise.db
docs/: README.md  UbiquitousLanguage.md  authentication_integration_report.md  beta_1_1_acceptance_report.md  deployment_infrastructure.mmd  deployment_readme.md  deployment_report.md  enterprise_dashboard_ui_spec.md  execution_flow.mmd  execution_sequence.mmd  operational_component_catalog.md  operational_integration_report.md  production_readiness_report.md  rel_razao_gx_analytics_report.md  risk_assessment.md  security_foundation_report.md  technical_debt_report.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: migrate_rel_razao_gx.py  run_acceptance.py  run_enterprise_homologation.py  run_etl.py  run_pipeline.py
src/: __init__.py
(+169 files in other folders)
